alteração de sessão de integração de projetos

--- a/_data/services.yml
+++ b/_data/services.yml
@@ -13,7 +13,7 @@
   url   :
   image : "obra.jpg"
   desc  :
-- title : Consultoria em integração de projetos
+- title : Consultoria em implantação e coordenação de projetos em BIM
   slug  : consult
   url   :
   image : "mac.jpg"
