Incluindo link para projetos

--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,6 +1,6 @@
 - title : Projeto de Arquitetura e Urbanismo
   slug  : projeto
-  url   :
+  url   : "01-projeto"
   image : "arqurb.jpg"
   desc  :
 - title : Certificações ambientais e energéticas
